--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ crashlytics-build.properties
 
 BeatManiUnity/Temp/UnityLockfile
 /GameStats/
+Evaluation/.ipynb_checkpoints/Analysis-checkpoint.ipynb
