BeatStats relative path

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ crashlytics-build.properties
 BeatManiUnity/Temp/UnityLockfile
 /GameStats/
 Evaluation/.ipynb_checkpoints/Analysis-checkpoint.ipynb
+Evaluation/BeatManiaStats Original
+Evaluation/BeatManiaStats
