table and graph adjustments

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ BeatManiUnity/Temp/UnityLockfile
 Evaluation/.ipynb_checkpoints/Analysis-checkpoint.ipynb
 Evaluation/BeatManiaStats Original
 Evaluation/BeatManiaStats
+Evaluation/individualplayers
